--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,25 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.7.1",
-    "com.unity.ide.rider": "2.0.7",
-    "com.unity.ide.visualstudio": "2.0.9",
-    "com.unity.ide.vscode": "1.2.3",
-    "com.unity.test-framework": "1.1.27",
+    "com.unity.burst": "1.8.2",
+    "com.unity.collab-proxy": "1.17.7",
+    "com.unity.collections": "1.2.4",
+    "com.unity.entities": "0.51.1-preview.21",
+    "com.unity.ide.rider": "3.0.16",
+    "com.unity.ide.visualstudio": "2.0.17",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.jobs": "0.51.0-preview.32",
+    "com.unity.mathematics": "1.2.6",
+    "com.unity.nuget.mono-cecil": "1.11.4",
+    "com.unity.profiling.core": "1.0.2",
+    "com.unity.properties": "1.7.5-preview",
+    "com.unity.properties.ui": "1.7.5-preview",
+    "com.unity.render-pipelines.universal": "12.1.8",
+    "com.unity.rendering.hybrid": "0.51.1-preview.21",
+    "com.unity.roslyn": "0.2.2-preview",
+    "com.unity.serialization": "1.7.5-preview",
+    "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
+    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
